#81 wrapping of text in featured content,and arrow color bug fixed

--- a/core/static/css/v2/pages/home/home-page.less
+++ b/core/static/css/v2/pages/home/home-page.less
@@ -28,6 +28,11 @@
       position: absolute;
       z-index: 9999999999;
       top: 25%;
+      .link-to-page {
+        border-top: 1px solid #FFF;
+        border-bottom: 1px solid #FFF;
+        padding: 14px;
+      }
       .margin-left {
         margin-left: 10px;
       }
@@ -45,6 +50,7 @@
           padding: 40px 0;
           max-width: 320px;
           margin: 0;
+          text-align: center;
 
           + div {
             text-align: center;
@@ -52,8 +58,6 @@
               padding: 15px 20px;
               .font-size(16);
               color: @text-light;
-              border-top: 1px solid @border-light;
-              border-bottom: 1px solid @border-light;
               &:hover {
                 color: @primary-color;
               }
@@ -208,6 +212,15 @@
   background: @lighter-grey;
   padding: 40px 0 20px 0;
   margin-bottom: 60px;
+  .date {
+    .dot-seperator {
+      margin: 5px;
+    }
+    a{
+      color: @grey;
+      margin-right: 0;
+    }
+  }
   .dropdown {
     button {
       border-radius: 0;
@@ -218,6 +231,7 @@
       color: @grey;
     }
   }
+
   .open > .dropdown-menu {
     display: block;
     min-width: 89px;
@@ -528,7 +542,7 @@
 }
 
 .red-angle-right {
-  color: @primary-color;
+  color: @primary-color !important;
   padding-left: 5px;
   font-weight: 700;
 }
